--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "standard": "^6.0.4",
+    "standard": "*",
     "tape": "^4.0.0",
     "virtual-dom": "^2.1.1",
     "zuul": "^3.0.0"
