--- a/.airtap.yml
+++ b/.airtap.yml
@@ -7,9 +7,7 @@ browsers:
     version: latest
   - name: safari
     version: latest
-  - name: ie
-    version: latest
   - name: microsoftedge
     version: latest
-  - name: android
+  - name: iphone
     version: latest
