--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hyperscript-attribute-to-property",
   "description": "Convert hyperscript attributes to properties",
   "version": "1.0.2",
+  "type": "module",
   "author": {
     "name": "Feross Aboukhadijeh",
     "email": "feross@feross.org",
